# rustica-compiler

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  rustica.opam
.github/workflows/: ci.yml
lib/: ast.ml  codegen.ml  dune  test_codegen.ml
test/: dune
